button changed text

--- a/fakbar.html
+++ b/fakbar.html
@@ -51,7 +51,7 @@ $(".fakbarpics").cycle('fade');
                 <br>
                 <li>You can quickly order a beer by pointing your pinky finger in the air.</li>
             </ul>
-            <a href="Find_Fakbar.html" id="button_fakbar">FIND YOUR COURSE SERVICE</a>
+            <a href="Find_Fakbar.html" id="button_fakbar">FIND YOUR FAKBAR</a>
         </div>
     </div>
 
