fetch xml + fakbar/cudi split

--- a/Find_Fakbar.html
+++ b/Find_Fakbar.html
@@ -8,6 +8,7 @@
     <script src="functions.js"></script>
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAZHYymzYflI1c7mbhFTcsb6NN4ss7LBwU&callback=initMap" type="text/javascript"></script>
     <script async defer src="https://buttons.github.io/buttons.js"></script>
+
     <title>Find your Fakbar</title>
 </head>
 <body>
@@ -89,7 +90,9 @@
     </div>
 
 <div id="overview">
+    <p id="overview_from_xml">
 
+    </p>
 </div>
 
 
