show fakbar if needed

--- a/Find_Fakbar.html
+++ b/Find_Fakbar.html
@@ -90,9 +90,10 @@
     </div>
 
 <div id="overview">
-    <p id="overview_from_xml">
-
-    </p>
+    <h2>Fakbar</h2>
+    <p id="fakbar_from_xml"></p>
+    <h2>Cudi</h2>
+    <p id="cudi_from_xml"></p>
 </div>
 
 
