--- a/Find_Fakbar.html
+++ b/Find_Fakbar.html
@@ -94,6 +94,8 @@
     <p id="fakbar_from_xml"></p>
     <h2>Cudi</h2>
     <p id="cudi_from_xml"></p>
+    <br>
+    <p id="coor_test"></p>
 </div>
 
 
