improved styling cudi page

--- a/cursusdienst.html
+++ b/cursusdienst.html
@@ -10,7 +10,6 @@
     <script async defer src="https://buttons.github.io/buttons.js"></script>
     <title>Find your Fakbar</title>
 
-
 </head>
 <script>
 $(document).ready(function() {
@@ -33,15 +32,16 @@ $(".cudipics").cycle('fade');
 
     <div class="mid">
         <div id="wide"><h1>What is a cursusdienst?</h1>
-            <p>Student associations from each faculty or program aim to help you study, next to providing entertainment. Most of them offer a cursusdienst (course service), where they sell course material as cheap as possible. Sometimes, member cards, gadgets and event tickets are available as well. There might even be a platform for selling and buying second hand books.</p>
+            <p>Student associations from each faculty or program aim to help you study, next to providing entertainment. Most of them offer a course service, where they sell course material as cheap as possible.</p>
+            <a href="Find_Fakbar.html" id="button_cudi">FIND YOUR COURSE SERVICE</a>
+
         </div>
 
         <div id="narrow"><h1>How does it work?</h1>
-            <p>Don't forget to bring your student card and member card, in order to take advantage of the members discount. Sometimes, course material has to be reserved online. On the cursusdienst website from you program, you can log in with your KU Leuven account. After reservations, your pickup location and date will be communicated via an automatic email. Always check the opening hours before heading to the cursusdienst. They are regularly changed during the semester.</p>
+            <p>Don't forget to bring your student card and member card, in order to take advantage of the members discount. Sometimes, course material has to be reserved online. Member cards, gadgets, event tickets and second hand books are often available as well.</p>
+            <p>On the cursusdienst website from you program, you can log in with your KU Leuven account. After reservations, your pickup location and date will be communicated via an automatic email. Always check the opening hours before heading to the cursusdienst. They are regularly changed during the semester.</p>
         </div>
     </div>
-
-    <a href="Find_Fakbar.html" id="button_cudi">FIND YOUR COURSE SERVICE</a>
 
     <div class="cudipics">
         <img src="images/cudi1.jpg"/>
