content blocks working at about page

--- a/about.html
+++ b/about.html
@@ -26,29 +26,26 @@
     </div>
 
 <div id="info">
-<div id="intro">
-    <h1>Who are we?</h1>
-    <p>
-        We are <a href="https://www.linkedin.com/in/anaschultze/" target="_blank">Ana Schultze</a> and <a href="https://www.linkedin.com/in/jelkejoosen/" target="_blank">Jelke Joosen</a>, Students of the Advanced Master's Programme <a href="https://set.kuleuven.be/mdh/" target="_blank"><em>Digital Humanities</em></a> at KU Leuven.
-    </p>
-</div>
+
 <div id="students">
+    <h1>Who are we?</h1>
+    <p id="us">We are <a href="https://www.linkedin.com/in/anaschultze/" target="_blank">Ana Schultze</a> and <a href="https://www.linkedin.com/in/jelkejoosen/" target="_blank">Jelke Joosen</a>, Students of the Advanced Master's Programme <a href="https://set.kuleuven.be/mdh/" target="_blank"><em>Digital Humanities</em></a> at KU Leuven.
+    </p>
+    <br><br><br>
         <h2>
             <ul><li>Ana Schultze</ul></li>
         </h2>
-        <p><br>
+        <p>
             Ana obtained her Master's degree in Art History at KU Leuven, specializing in tapestry and Digital Art History. She works in the library as a student employee and is passionate about analog photography, playing the harp and volunteering in the cultural sector. She also has a background in student representation as member of Mecenas (the association for art history students) and as Culture Coordinator at LOKO.
         </p>
         <img src="images/ana.jpg" alt="ana">
-
-        <h2>
+        <br><br><h2>
             <ul><li>Jelke Joosen</ul></li>
         </h2>
-        <p><br><br>
+        <p><br>
             Jelke has a Bachelor's Degree in English and Dutch Linguistics and Literature. She obtained this degree from the University of Antwerp, where she also completed a Master of Linguistics, specifying in <em>Computational Psycholinguistics</em>. In her free time she plays the saxophone and the trombone, and volunteers at childrens' vacation camps as a governmentally certified monitor.
         </p>
         <img src="images/jelke.jpg" alt="jelke">
-</div>
 </div>
 
 <div id ="DH">
@@ -57,6 +54,8 @@
     <p>
         The question of defining Digital Humanities has been an age old problem (not really <em>age</em> old, but you get the jist). Our attempt at defining it would be <em>the application, construction, and usage of digitial tools - of various kinds - to enhance humanities research and studies</em>. Ultimately, there might be as many definitions of the field as there are digital humanists around.
     </p>
+</div>
+
 </div>
 
 <div id="why">
