about page styled in content blocks

--- a/about.html
+++ b/about.html
@@ -49,17 +49,15 @@
 </div>
 
 <div id ="DH">
-    <br>
     <h1>What are <em>Digital Humanities</em>?</h1>
-    <p>
-        The question of defining Digital Humanities has been an age old problem (not really <em>age</em> old, but you get the jist). Our attempt at defining it would be <em>the application, construction, and usage of digitial tools - of various kinds - to enhance humanities research and studies</em>. Ultimately, there might be as many definitions of the field as there are digital humanists around.
-    </p>
+    <p>The question of defining Digital Humanities has been an age old problem (not really <em>age</em> old, but you get the jist).</p>
+    <p>Our attempt at defining it would be <em>the application, construction, and usage of digitial tools - of various kinds - to enhance humanities research and studies</em>. Ultimately, there might be as many definitions of the field as there are digital humanists around.</p>
+    <a href="https://whatisdigitalhumanities.com/" id="button_dh">FIND MORE DEFINITIONS</a>
 </div>
 
 </div>
 
 <div id="why">
-    <br>
     <h1>Why are we doing this?</h1>
     <p>
         Within the Programme of Digital Humanities, the optional course <em>Web Information Systems</em> is offered. The course has the following* aims: <br>
@@ -76,7 +74,7 @@
         *Description taken from the <a href="https://onderwijsaanbod.kuleuven.be/syllabi/e/G0Y11AE.htm#activetab=doelstellingen_idp1354736" target="_blank">course page</a>.
     </p>
     <p>
-        When discussing possible projects for the course described above, we tought it would be fun and practical to make a web application that could help students who are new to the KU Leuven find their way around the city, highlighting certain <em> points of interest </em> for them. Though a similar page already existed, it was not particularly dynamic, and also terribly outdated.
+        When discussing possible projects for the course described above, we thought it would be fun and practical to make a web application that could help students who are new to the KU Leuven find their way around the city, highlighting certain <em> points of interest </em> for them. Though a similar page already existed, it was not particularly dynamic, and also terribly outdated.
     </p>
 </div>
 
