home page box styling & about page link opens in new tab

--- a/Find_Fakbar.html
+++ b/Find_Fakbar.html
@@ -24,7 +24,7 @@
         <br>
     </div>
 
-<div id="info">
+<div id="box">
 <div id="groups">
 <h3>Select your Group</h3>
 <select class ="default" id="group" name="group">
