--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
     <h1>What are <em>Digital Humanities</em>?</h1>
     <p>The question of defining Digital Humanities has been an age old problem (not really <em>age</em> old, but you get the jist).</p>
     <p>Our attempt at defining it would be <em>the application, construction, and usage of digitial tools - of various kinds - to enhance humanities research and studies</em>. Ultimately, there might be as many definitions of the field as there are digital humanists around.</p>
-    <a href="https://whatisdigitalhumanities.com/" id="button_dh">FIND MORE DEFINITIONS</a>
+    <a href="https://whatisdigitalhumanities.com/" id="button_dh" target="_blank">FIND MORE DEFINITIONS</a>
 </div>
 
 </div>
