functions updated for arts degrees

--- a/Find_Fakbar.html
+++ b/Find_Fakbar.html
@@ -77,7 +77,7 @@
 
 <div id="degrees_arts">
 <h3>Select your Degree</h3>
-<select>
+<select class="default" id="degree" name="degree">
     <option value="empty"> </option>
     <option value="archeology">Bachelor in archeology</option>
     <option value="history">Bachelor in history</option>
