update functions for science & engineering

--- a/Find_Fakbar.html
+++ b/Find_Fakbar.html
@@ -59,7 +59,7 @@
     <option value="empty"> </option>
     <option value="architecture">Faculty of Architecture</option>
     <option value="science">Faculty of Science</option>
-    <option value="engineering">Faculty of Engineering Science</option>
+    <option value="engineering_sc">Faculty of Engineering Science</option>
     <option value="bioscience">Faculty of Bioscience Engineering</option>
     <option value="engineering">Faculty of Engineering Technology</option>
 </select>
@@ -94,8 +94,7 @@
     <p id="fakbar_from_xml"></p>
     <h2>Cudi</h2>
     <p id="cudi_from_xml"></p>
-    <br>
-    <p id="coor_test"></p>
+    
 </div>
 </div>
 
