this page needs your location

--- a/Find_Fakbar.html
+++ b/Find_Fakbar.html
@@ -29,6 +29,7 @@
 
 <div id="groups">
 <h3>Select your Group</h3>
+<p>This page needs access to your location for optimal user experience.</p>
 <select class ="default" id="group" name="group">
     <option value="empty" selected="selected"> </option>
     <option value="humanities">Humanities and Social Sciences</option>
