Find_Fakbar.html is now called index.html

--- a/cursusdienst.html
+++ b/cursusdienst.html
@@ -21,7 +21,7 @@ $(".cudipics").cycle('fade');
     <div id="nav">
 
         <ul>
-            <li><a href="Find_Fakbar.html"><img id="logo" src="logo.png"></a></li>
+            <li><a href="index.html"><img id="logo" src="logo.png"></a></li>
             <li> <a href="about.html"> ABOUT </a></li>
             <li> <a href="fakbar.html"> FAKBAR </a></li>
             <li> <a href="cursusdienst.html"> CURSUSDIENST </a></li>
@@ -32,7 +32,7 @@ $(".cudipics").cycle('fade');
     <div class="mid">
         <div id="wide"><h1>What is a cursusdienst?</h1>
             <p>Student associations from each faculty or program aim to help you study, next to providing entertainment. Most of them offer a course service, where they sell course material as cheap as possible.</p>
-            <a href="Find_Fakbar.html" id="button_cudi">FIND YOUR COURSE SERVICE</a>
+            <a href="index.html" id="button_cudi">FIND YOUR COURSE SERVICE</a>
 
         </div>
 
