--- a/fakbar.html
+++ b/fakbar.html
@@ -23,7 +23,7 @@ $(".fakbarpics").cycle('fade');
     <div id="nav">
 
         <ul>
-            <li><a href="Find_Fakbar.html"><img id="logo" src="logo.png"></a></li>
+            <li><a href="index.html"><img id="logo" src="logo.png"></a></li>
             <li> <a href="about.html"> ABOUT </a></li>
             <li> <a href="fakbar.html"> FAKBAR </a></li>
             <li> <a href="cursusdienst.html"> CURSUSDIENST </a></li>
@@ -51,7 +51,7 @@ $(".fakbarpics").cycle('fade');
                 <br>
                 <li>You can quickly order a beer by pointing your pinky finger in the air.</li>
             </ul>
-            <a href="Find_Fakbar.html" id="button_fakbar">FIND YOUR FAKBAR</a>
+            <a href="index.html" id="button_fakbar">FIND YOUR FAKBAR</a>
         </div>
     </div>
 
