--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <div id="nav">
         <ul>
-            <li><a href="Find_Fakbar.html"><img id="logo" src="logo.png"></a></li>
+            <li><a href="index.html"><img id="logo" src="logo.png"></a></li>
             <li><a href="about.html">ABOUT</a></li>
             <li><a href="fakbar.html">FAKBAR</a></li>
             <li><a href="cursusdienst.html">CURSUSDIENST</a></li>
@@ -94,7 +94,7 @@
     <p id="fakbar_from_xml"></p>
     <h2>Cudi</h2>
     <p id="cudi_from_xml"></p>
-    
+
 </div>
 </div>
 
