--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
     <div id="nav">
 
         <ul>
-            <li><a href="Find_Fakbar.html"><img id="logo" src="logo.png"></a></li>
+            <li><a href="index.html"><img id="logo" src="logo.png"></a></li>
             <li> <a href="about.html"> ABOUT </a></li>
             <li> <a href="fakbar.html"> FAKBAR </a></li>
             <li> <a href="cursusdienst.html"> CURSUSDIENST </a></li>
