--- a/fakbar.html
+++ b/fakbar.html
@@ -6,7 +6,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <script src = "https://code.jquery.com/jquery-2.1.4.min.js"></script>
     <script src = "functions.js"></script>
-    <script src="http://malsup.github.io/jquery.cycle.all.js"></script>
+    <script src="https://malsup.github.io/jquery.cycle.all.js"></script>
     <script async defer src="https://buttons.github.io/buttons.js"></script>
     <title>Find your Fakbar</title>
 
