--- a/fakbar.html
+++ b/fakbar.html
@@ -40,7 +40,7 @@ $(".fakbarpics").cycle('fade');
 
     <div class="midfak">
         <div id="widefak"><h1>What is a fakbar?</h1>
-            <p>A fakbar is a bar that is run by members from student associations. According to the <a href="http://www.vlaamswoordenboek.be/definities/term/fakbar" target="_blank">Femish Online Dictionay</a>, it is a student cafe of a certain faculty, where the beer is usually cheap.</p>
+            <p>A fakbar is a bar that is run by members from student associations. According to the <a href="http://www.vlaamswoordenboek.be/definities/term/fakbar" target="_blank">Flemish Online Dictionary</a>, it is a student cafe of a certain faculty, where the beer is usually cheap.</p>
             <p>The fakbar functions as a meeting place for people who want to get to know fellows students from their degree. Since the fakbars are managed and opened by student volunteers, the prices for consumptions can be kept as democratic as possible. This makes fakbars popular spots in Leuven.</p>
             <p>The history of fakbars in Leuven goes back many years. Fakbars play important role in the city's nightlife industry and have become an essential part of university life. The word "fakbar" is derived from the Flemish "faculteitsbar" (which used to be written with a k), literally meaning "faculty bar".</p>
         </div>
